--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "node data/convert-to-json.ts; ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:nirasaki-rakugo": "node dist/nirasaki-rakugo/server/server.mjs"
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "csvtojson": "^2.0.10",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
